# sheepdog-rl

./: .gitignore  LICENSE  README.md  ppo_sheepdog_vecnorm.pkl  pyproject.toml  requirements.txt
examples/: _policy_utils.py  cem_solver.py  cem_to_bc.py  check_rewards.py  demo.py  diagnose.py  eval_sb3.py  heuristic_agent.py  inspect_policy.py  play_sb3.py  rollouts_gif.py  train_sb3.py
sheepdog_env/: __init__.py  env.py  flocking.py  geometry.py  rendering.py  vec_env.py
tests/: test_env.py  test_vec_env.py
